--- a/templates/items.html
+++ b/templates/items.html
@@ -1,8 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title> items </title>
+    <link rel="stylesheet" href="{% static 'CSS/menu/style.css' %}">
+    <link href="{% static 'img/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
     <style>
         * {
             box-sizing: border-box;
@@ -70,6 +73,12 @@
     </style>
 </head>
 <body>
+<nav class="menu">
+    <a href="{% url 'items' %}"> Список товаров</a>
+    <a href="{% url 'about' %}"> Об авторе</a>
+    <a href="{% url 'login' %}"> Войти</a>
+</nav>
+<main class="content">
 <span class="title"> Список товаров </span>
 {% for item in items %}
     <div class="product-item">
@@ -82,5 +91,6 @@
         </div>
     </div><br>
 {% endfor %}
+</main>
 </body>
 </html>
